/*
|--------------------------------------------------------------------------
| PropertyKey.ts
|--------------------------------------------------------------------------
*/

export enum PropertyKey {
  Position,

  Rotation,

  Scale,

  Color,

  Opacity,

  StrokeWidth,

  StrokeColor,
}
